feat: WIP add grouped annotation support in FE

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -109,4 +109,18 @@
         white-space: nowrap;
         width: 1px;
       }
+
+    select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background: transparent;
+        background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='20' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none' /></svg>");
+        background-repeat: no-repeat;
+        background-position-x: 95%;
+        background-position-y: 50%;
+        border: 1px solid #dfdfdf;
+        border-radius: 3px;
+        padding: .3rem;
+        padding-right: 1.5rem;
+    }
 }
