--- a/frontend/src/assets/css/components/button.css
+++ b/frontend/src/assets/css/components/button.css
@@ -2,6 +2,10 @@
     @apply text-blue-500 outline-none focus:outline-none hover:text-blue-700 hover:bg-grey-200 rounded-full p-1 focus:ring-2 focus:ring-blue-700;
 }
 
+.btn-active {
+    @apply text-blue-700 bg-grey-200 rounded-full p-1;
+}
+
 .btn-primary {
     @apply px-4 py-2 text-white bg-blue-500 rounded shadow hover:bg-blue-600;
 }
